# feelost-dash

./: .gitignore  README.md  app.py  app.yaml  app_old.py  main.py  pyproject.toml  requirements.txt
assets/: feelost.css
data/input/: epi_inconsis_level_df.csv  epi_inconsis_region_df.csv  epi_outliers.csv  epi_outliers_agg.csv  epi_outliers_level_agg.csv  epi_outliers_level_df.csv  epi_outliers_region_agg.csv  epi_outliers_region_df.csv  hf_list_df.csv
data/raw/: Amhara Health facilities geospatioal coordinate data.csv  Amhara Health facilities geospatioal coordinate data.xlsx  Health Facilities_Amhara_Lastest.csv  Health Facilities_Amhara_Lastest.xlsx  Population data from 2011 to 2016 EFY by WrHO_ZHD_RHB.csv  Population data from 2011 to 2016 EFY by WrHO_ZHD_RHB.xls
pages/: Outliers.py  about.py  datasets.py  feedback.py  inconsistencies.py  outliers.py
script/: clean_raw_data.py  epi.py  outlier_metrics.py
