[tool.poetry]
name = "feelost-dash"
version = "0.1.0"
description = ""
authors = ["Mamadou S Diallo <me@msdiallo.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = {extras = ["numpy", "pandas"], version = "^0.20.5"}
plotly = "^5.18.0"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
dash-auth = "^2.0.0"
scipy = "^1.12.0"
gunicorn = "20.1.0"
dash-enterprise-auth = "^0.2.1"
dash-ag-grid = "^31.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
